# project_sgn

./: README.md
Analisi_matlab/: Analisi_cortile.m  Analisi_localization_vicon.m  Analisi_uwbvicon_confronto.asv  Analisi_uwbvicon_confronto.m  Confronto_stanzavolo_Vicon.m  Confronto_stanzavolo_Vicon_new.m  animate_charlie.m  animate_charlie_cortile.m  animate_charlie_localization_vicon.m  animate_charlie_uwbvicon_confronto.m  draw_charlie.m  errore_tag.m  exp_fig.m  plot_pos_anchors.m  quat2yaw_array.m  tag_vicon.m
Analisi_matlab/files_bag_mat/: .gitignore  0615posizioni ancore.txt
Analisi_matlab/functions/: circle.m  exp_fig.m  norm_array.m  quat2yaw_array.m  sync_vicon_tag.m  tag_vicon.m  tagspos2yaw.m
Course Information/: programma_pollini.txt
Info/: .~lock.Pacchetti.ods#  Pacchetti.ods  README_wifi_settings.txt  readme_CSM.txt  readme_google.txt  readme_pack.txt  readme_packages.txt  readme_pozyx.txt  readme_scan_tools.txt  renaming_ttyUSB.txt
Old_work/crosato_tesconi/: READ_ME.txt
Old_work/crosato_tesconi/E1 Bias Antenne/: READ_ME.txt  acquisizioni_distanze_due_antenne.m  acquisizioni_distanze_due_antenne.py  analisi_bias.m
Old_work/crosato_tesconi/E2 Autocalibrazione 2D/: READ_ME.txt  auto_calibrazione_2D.m  calcolo_posizioni.m  (+1 more)
Old_work/progetto Bagala__Avantaggiato/: .gitignore  cose rimaste in sospeso.txt
Relazione/: .gitignore  Descrizione_Sistema.tex  biblio.bib  introduzione.tex  main.tex  structure.tex  titlepage.tex
Workspace/charlie_autocalibration/: autocalibration_ransac.py
Workspace/charlie_remote/: CMakeLists.txt
Workspace/charlie_remote_ws/src/charlie_remote/: package.xml
Workspace/charlie_remote_ws/src/charlie_remote/launch/: exec_bag.launch
Workspace/charlie_remote_ws/src/charlie_remote/plotjuggler_cfg/: test.xml
Workspace/charlie_remote_ws/src/charlie_remote/rviz_cfg/: test_frames_map.rviz
Workspace/charlie_remote_ws/src/charlie_remote/src/: charlie_vicon2map.py  charlie_vicon2uwb.py  vicon_frame2UWB_tf.txt
Workspace/charlie_storage/: stanzavolo_prova.yaml
Workspace/charlie_ws/src/SerialManager/: package.xml
Workspace/charlie_ws/src/SerialManager/include/: mySerial_ROS.h
Workspace/charlie_ws/src/SerialManager/src/: mySerial_ROS.cpp
Workspace/src/charlie_launch/: package.xml  readme.txt
Workspace/src/charlie_launch/launch/: hector_geotiff_traj_server.launch  laser_Scan_matcher.launch  lidar_hector.launch  localization.launch  localization_bag_file.launch  new_map.launch  prova_scan_matcher.launch  rplidar_a3.launch  save_map_origin.launch
autocalibration/: rangesToPos.py  ransac.py
cose_rosbag/: README.txt  localization_for_bagfile.launch
python files/: debug_anchors.py  debug_uwb.py  getPozyxId.py  save_device_list.py
(+3433 files in other folders)
