<?xml version="1.0"?>
<package format="2">
  <name>charlie_launch</name>
  <version>0.0.0</version>
  <description>charlie_launch contiene i file di lancio utili. Una breve descrizione e` fornita nel file readme</description>
  
  <maintainer email="charlie.robot.dii@gmail.com">Charlie Robot</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/ABiondi12/project_sgn</url>

  <author email="9alessia5@gmail.com">Alessia Biondi</maintainer>
  <author email="petracci.francesco@gmail.com">Francesco Petracci</maintainer>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
