<?xml version="1.0"?>
<package>
  <name>serial_manager</name>
  <version>0.0.0</version>
  <description>The RS232 package</description>

 <maintainer email="charlie.robot.dii@gmail.com">Charlie Robot</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/ABiondi12/project_sgn</url>

  <author email="9alessia5@gmail.com">Alessia Biondi</author>
  <author email="petracci.francesco@gmail.com">Francesco Petracci</author>

  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
